--- a/src/Components/WheelDecider.css
+++ b/src/Components/WheelDecider.css
@@ -1,38 +1,38 @@
 li:first-child .text {
-    background-color: violet;
+    background-color: red;
 }
 li:nth-child(2) .text {
-    background-color: indigo;
+    background-color: orange;
 }
 li:nth-child(3) .text {
-    background-color: blue;
+    background-color: yellow;
 }
 li:nth-child(4) .text {
     background-color: green;
 }
 li:nth-child(5) .text {
-    background-color: yellow;
+    background-color: blue;
 }
 li:nth-child(6) .text {
-    background-color: orange;
+    background-color: blueviolet;
 }
 li:nth-child(7) .text {
     background-color: red;
 }
 li:nth-child(8) .text {
-    background-color: violet;
+    background-color: orange;
 }
 li:nth-child(9) .text {
-    background-color: indigo;
+    background-color: yellow;
 }
 li:nth-child(10) .text {
-    background-color: blue;
-}
-li:nth-child(11) .text {
     background-color: green;
 }
+li:nth-child(11) .text {
+    background-color: blue;
+}
 li:nth-child(12) .text {
-    background-color: yellow;
+    background-color: blueviolet;
 }
 
 li:first-child {
